# time-capsule

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: time-capsule.yml
scripts/diesel/: diesel-tik-model.sh  diesel-tik-schema.sh  diesel-tik.toml
src/: main.rs
src/biz/todo/: mod.rs  task_controller.rs  todo_controller.rs  todo_list_controller.rs
src/model/: mod.rs
src/model/diesel/: mod.rs
src/model/diesel/tik/: custom_tik_models.rs  mod.rs  tik_models.rs  tik_schema.rs
src/model/request/: mod.rs
src/model/request/task/: add_task_request.rs  mod.rs  query_task_request.rs
src/model/request/todo/: add_task_request.rs  add_todo_request.rs  del_task_request.rs  del_todo_list_request.rs  del_todo_request.rs  mod.rs  probe_todo_request.rs  update_todo_list_request.rs  update_todo_request.rs
src/model/response/todo/: mod.rs  todo_list_response.rs  todo_response.rs
src/service/todo/: mod.rs  task_service.rs  todo_list_service.rs  todo_service.rs
src/utils/: database.rs
