[package]
name = "time-capsule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
okapi = { git = "https://github.com/GREsau/okapi.git"}
schemars = "0.7"
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.64", features = ["derive"] }
diesel = { version = "1.4.8", features = ["postgres","64-column-tables","chrono","serde_json"] }
rust_wheel = { git = "https://github.com/jiangxiaoqiang/rust_wheel.git" }